<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/MainMenu_Id" xmlns:android="http://schemas.android.com/apk/res/android" 
	          android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
			  android:paddingTop="40.0dip" >

	<Button 
		android:id="@id/MainMenu_StartBtn_Id" 
		android:background="@drawable/button_mode" 
		android:text="@string/MainMenu_StartBtn_Text" 
		
		android:drawableLeft="@drawable/start" android:drawablePadding="20.0dip" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#737678" android:gravity="center_vertical" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:paddingLeft="30.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>

	<Button 
		android:id="@id/MainMenu_SyncBtn_Id" 
		android:background="@drawable/button_mode" 
		android:text="@string/MainMenu_SyncBtn_Text" 
		
		android:layout_marginTop="20.0px" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#737678" android:gravity="center" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>

	<Button 
		android:id="@id/MainMenu_CheckinListBtn_Id" 
		android:background="@drawable/button_mode" 
		android:text="@string/MainMenu_CheckinListBtn_Text" 
		
		android:layout_marginTop="20.0px" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#ff737678" android:gravity="center" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>

<LinearLayout android:orientation="horizontal" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" >
	<Button 
		android:id="@id/MainMenu_ReferenceBtn_Id" 
		android:background="@drawable/button_mode" 
		android:text="@string/MainMenu_ReferenceBtn_Text" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#ff737678" android:gravity="center" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" 
		android:layout_width="150.0dip" android:layout_height="wrap_content" 
	/>

	<Button 
		android:id="@id/MainMenu_UpdateBtn_Id" 
		android:background="@drawable/button_mode" 
		android:text="@string/MainMenu_UpdateBtn_Text" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#ff737678" android:gravity="center" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" 
		android:layout_width="150.0dip" android:layout_height="wrap_content" 
	/>
</LinearLayout>

</LinearLayout>
</LinearLayout>