<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/PageModeSelection" xmlns:android="http://schemas.android.com/apk/res/android"
	          android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
			  android:paddingTop="40.0dip" >
	
	<TextView 
		android:id="@id/lable_head" 
		android:text="@string/msg_select_mode" 
		
		android:textSize="13.0pt" android:textColor="#fff" android:gravity="center_horizontal" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:paddingBottom="30.0px">
	</TextView>
	
	<Button 
		android:id="@id/PageModeSelection_start_button" 
		android:background="@drawable/button_mode" 
		android:text="@string/lable_start_work" 
		
		android:drawableLeft="@drawable/start" android:drawablePadding="20.0dip" 
		
		android:textSize="9.0pt" android:typeface="sans" android:textStyle="bold" android:textColor="#737678" android:gravity="center_vertical" 
		android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:paddingLeft="30.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>
	
	<Button 
		android:id="@id/PageModeSelection_end_button" 
		android:background="@drawable/button_mode" 
		android:text="@string/lable_end_work" 
		
		android:drawableLeft="@drawable/finish" android:drawablePadding="20.0dip" 
		
		android:layout_marginTop="20.0px" 
		
		android:textSize="9.0pt" android:textColor="#737678" android:typeface="sans" android:textStyle="bold" 
		android:gravity="center_vertical" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:paddingLeft="30.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>
	
	<Button 
		android:id="@id/PageModeSelection_check_button" 
		android:background="@drawable/button_mode" 
		android:text="@string/lable_check" 
		
		android:drawableLeft="@drawable/check" android:drawablePadding="20.0dip" 
		
		android:layout_marginTop="20.0px" 
		
		android:textSize="9.0pt" android:textColor="#737678" android:typeface="sans" android:textStyle="bold" 
		android:gravity="center_vertical" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:paddingLeft="30.0dip" 
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
	/>
	
</LinearLayout>
</LinearLayout>